fixed z-index on section buttons

--- a/frontend/src/styles/scss/components/_contacts.scss
+++ b/frontend/src/styles/scss/components/_contacts.scss
@@ -38,11 +38,11 @@
         background-color: none;
         border: none;
         border-radius: none;
-        z-index: 5;
+        z-index: 2;
       }
       .green-slide {
         position: relative;
-        z-index: 3;
+        z-index: 1;
         margin-top: -1.5em;
         border-radius: 0.5em;
         background-color: rgba(0, 128, 0, 0.7);
