--- a/frontend/src/styles/stylesheet/main.css
+++ b/frontend/src/styles/stylesheet/main.css
@@ -90,11 +90,11 @@ form button {
   background-color: none;
   border: none;
   border-radius: none;
-  z-index: 5;
+  z-index: 2;
 }
 .contacts-section .contact-nav .section-switch .green-slide {
   position: relative;
-  z-index: 3;
+  z-index: 1;
   margin-top: -1.5em;
   border-radius: 0.5em;
   background-color: rgba(0, 128, 0, 0.7);
